@@ -29,13 +29,9 @@
 #include <boost/archive/binary_oarchive.hpp>
 #include <boost/archive/binary_iarchive.hpp>
 
-#include <asn-incl.h>
-//#include <snacc/c++/asn-type.h>
-
-#include "ASNPerson.h" 
-
 // Global vars used in deserialization
-mongo::BSONObj d_bsonobj;
+mongo::BSONObj    d_bsonobj;
+AsnBuf            a_buffer;
 std::stringstream ss;
 // End of global variables
 
@@ -57,8 +53,9 @@ void deserialize_bson()
 void serialize_boost(void)
 {
   Person p("Joe", 33);
+  // The following empty ss but cause an "invalid signature" exception
+  // ss.clear(); ss.str(std::string()); 
   boost::archive::binary_oarchive oa(ss);
-  ss.clear(); ss.str(std::string()); // empty ss
   oa << p;
 }
 
@@ -71,29 +68,15 @@ void deserialize_boost(void)
 
 void serialize_asn(void)
 {
-  AsnBuf buf;
-  const size_t dataSize = 1024;
-  char data[dataSize];
-  std::ofstream outputFile;
-  size_t encodedLen;
-  bool writeToFile = false; // to true only to get result size in pr.ber
-  
-  ASNPerson p;
-  p.name = "Joe";
-  p.age = 33;
-  buf.Init (data, dataSize);
-  buf.ResetInWriteRvsMode();
-  AsnLen len = p.BEncPdu ( buf, encodedLen );
-
-  if (writeToFile)
-    {
-      outputFile.open ("pr.ber");
-      buf.ResetInReadMode();
-      for (; encodedLen > 0; encodedLen--)
-        outputFile.put (buf.GetByte());
-    }
+  Person p("joe", 33);;
+  p.serialize (a_buffer);
 }
 
+void deserialize_asn(void)
+{
+  Person p;
+  p.deserialize (a_buffer);
+}
 
 
 int
@@ -104,11 +87,10 @@ main()
   benchmark ("Serialization  ", "Boost (69 bytes)", &serialize_boost, 100);
   benchmark ("Serialization  ", "Snacc (10 bytes)", &serialize_asn, 100);
 
-  std::cout << ss.str() << std::endl;
-
   // Deserialization
   benchmark ("Deserialization", "BSon (28 bytes)", &deserialize_bson, 100);
   benchmark ("Deserialization", "Boost (69 bytes)", &deserialize_boost, 100);
+  benchmark ("Deserialization", "Snacc (10 bytes)", &deserialize_asn, 100);
 
   return 0;
 }
